src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceReferralIntrnalComments__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceReferralIntrnalComments__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Tertiary Insurance Referral Comments</label>
    <type>TextArea</type>
</CustomField>