src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceReferralReceived__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceReferralReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From Artemis only - cant be edited.</inlineHelpText>
    <label>Tertiary Referral Received</label>
    <type>Checkbox</type>
</CustomField>