src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TertiaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>TertiaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tertiary Referral Required</label>
    <type>Checkbox</type>
</CustomField>