src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/TypeOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>TypeOfInsurance__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare / Medicaid</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>