src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/WebformRequesterType__c.field-meta.xml
<CustomField>
    <fullName>WebformRequesterType__c</fullName>
    <inlineHelpText>Field not in sync with Artemis.</inlineHelpText>
    <label>Webform Requester Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>provider_requesting_information</fullName>
                <label>Provider requesting information</label>
            </value>
            <value>
                <fullName>provider_sending_information</fullName>
                <label>Provider sending information</label>
            </value>
            <value>
                <fullName>patient_requesting_information</fullName>
                <label>Patient requesting information</label>
            </value>
            <value>
                <fullName>patient_requesting_appointment</fullName>
                <label>Patient requesting appointment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>