src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/WorkPhoneEligibleForTextMessages__c.field-meta.xml
<CustomField>
    <fullName>WorkPhoneEligibleForTextMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Phone - Eligible for text messages</label>
    <type>Checkbox</type>
</CustomField>