src/orgs/usa/data-model/objects/PatientServerProfile__c/fields/WorkPhoneEligibleForVoiceMail__c.field-meta.xml
<CustomField>
    <fullName>WorkPhoneEligibleForVoiceMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Phone - Eligible for voice mail</label>
    <type>Checkbox</type>
</CustomField>